@@ -6,7 +6,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
@@ -46,9 +45,6 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.UNDERSCORE;
 @Data
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class RoleAssignmentService {
-    @Value("${prl.environment}")
-    private String environment;
-
     private final UserService userService;
     private final RoleAssignmentApi roleAssignmentApi;
     private final AuthTokenGenerator authTokenGenerator;
@@ -61,57 +57,54 @@ public class RoleAssignmentService {
                                      String eventName,
                                      boolean replaceExisting,
                                      String roleName) {
-        if (!environment.equals("preview")) {
-
-            log.info("Role Assignment called from event - {}", eventName);
-            String actorId = populateActorIdFromDto(authorization, roleAssignmentDto);
-            String roleCategory = RoleCategory.JUDICIAL.name();
-            if (null != actorId) {
-                if (null != roleAssignmentDto.getLegalAdviserList()) {
-                    roleName = "allocated-legal-adviser";
-                    roleCategory = RoleCategory.LEGAL_OPERATIONS.name();
-                }
-
-                String systemUserToken = systemUserService.getSysUserToken();
-                String systemUserId = systemUserService.getUserId(systemUserToken);
-
-                RoleRequest roleRequest = RoleRequest.roleRequest()
-                    .assignerId(systemUserId)
-                    .process("CCD")
-                    .reference(createRoleRequestReference(caseDetails, systemUserId))
-                    .replaceExisting(replaceExisting)
-                    .build();
-                String actorIdForService = actorId.split(UNDERSCORE)[0];
-                List<RequestedRoles> requestedRoles = List.of(RequestedRoles.requestedRoles()
-                                                                  .actorIdType("IDAM")
-                                                                  .actorId(actorIdForService)
-                                                                  .roleType(RoleType.CASE.name())
-                                                                  .roleName(roleName)
-                                                                  .classification(Classification.RESTRICTED.name())
-                                                                  .grantType(GrantType.SPECIFIC.name())
-                                                                  .roleCategory(roleCategory)
-                                                                  .readOnly(false)
-                                                                  .beginTime(Instant.now())
-                                                                  .attributes(Attributes.attributes()
-                                                                                  .jurisdiction(caseDetails.getJurisdiction())
-                                                                                  .caseType(caseDetails.getCaseTypeId())
-                                                                                  .caseId(caseDetails.getId().toString())
-                                                                                  .build())
-
-                                                                  .build());
-
-                RoleAssignmentRequest assignmentRequest = RoleAssignmentRequest.roleAssignmentRequest()
-                    .roleRequest(roleRequest)
-                    .requestedRoles(requestedRoles)
-                    .build();
-
-                roleAssignmentApi.updateRoleAssignment(
-                    systemUserToken,
-                    authTokenGenerator.generate(),
-                    null,
-                    assignmentRequest
-                );
+        log.info("Role Assignment called from event - {}", eventName);
+        String actorId = populateActorIdFromDto(authorization, roleAssignmentDto);
+        String roleCategory = RoleCategory.JUDICIAL.name();
+        if (null != actorId) {
+            if (null != roleAssignmentDto.getLegalAdviserList()) {
+                roleName = "allocated-legal-adviser";
+                roleCategory = RoleCategory.LEGAL_OPERATIONS.name();
             }
+
+            String systemUserToken = systemUserService.getSysUserToken();
+            String systemUserId = systemUserService.getUserId(systemUserToken);
+
+            RoleRequest roleRequest = RoleRequest.roleRequest()
+                .assignerId(systemUserId)
+                .process("CCD")
+                .reference(createRoleRequestReference(caseDetails, systemUserId))
+                .replaceExisting(replaceExisting)
+                .build();
+            String actorIdForService = actorId.split(UNDERSCORE)[0];
+            List<RequestedRoles> requestedRoles = List.of(RequestedRoles.requestedRoles()
+                                                              .actorIdType("IDAM")
+                                                              .actorId(actorIdForService)
+                                                              .roleType(RoleType.CASE.name())
+                                                              .roleName(roleName)
+                                                              .classification(Classification.RESTRICTED.name())
+                                                              .grantType(GrantType.SPECIFIC.name())
+                                                              .roleCategory(roleCategory)
+                                                              .readOnly(false)
+                                                              .beginTime(Instant.now())
+                                                              .attributes(Attributes.attributes()
+                                                                              .jurisdiction(caseDetails.getJurisdiction())
+                                                                              .caseType(caseDetails.getCaseTypeId())
+                                                                              .caseId(caseDetails.getId().toString())
+                                                                              .build())
+
+                                                              .build());
+
+            RoleAssignmentRequest assignmentRequest = RoleAssignmentRequest.roleAssignmentRequest()
+                .roleRequest(roleRequest)
+                .requestedRoles(requestedRoles)
+                .build();
+
+            roleAssignmentApi.updateRoleAssignment(
+                systemUserToken,
+                authTokenGenerator.generate(),
+                null,
+                assignmentRequest
+            );
         }
     }
 
@@ -121,7 +114,7 @@ public class RoleAssignmentService {
         } else if (null != roleAssignmentDto.getJudicialUser()) {
             return getIdamId(roleAssignmentDto.getJudicialUser())[0];
         } else if (null != roleAssignmentDto.getJudgeEmail()) {
-            return userService.getUserByEmailId(authorization, roleAssignmentDto.getJudgeEmail()).get(0).getId();
+            return userService.getUserByEmailId(authorization, roleAssignmentDto.getJudgeEmail()).getFirst().getId();
         }
         return null;
     }
@@ -131,7 +124,7 @@ public class RoleAssignmentService {
             legalAdviserList,
             DynamicList.class
         ).getValue().getCode(), "(", ")");
-        return userService.getUserByEmailId(authorization, laEmailId).get(0).getId();
+        return userService.getUserByEmailId(authorization, laEmailId).getFirst().getId();
     }
 
     private String createRoleRequestReference(final CaseDetails caseDetails, final String userId) {
@@ -176,10 +169,10 @@ public class RoleAssignmentService {
         Map<String, String> finalRoles = new HashMap<>();
         List<UserDetails> userDetails = userService.getUserByEmailId(authorisation, emailId);
         final String[] idamRoles = {null};
-        userDetails.stream().forEach(
+        userDetails.forEach(
             userDetail -> {
                 idamRoles[0] = "";
-                userDetail.getRoles().stream().forEach(
+                userDetail.getRoles().forEach(
                     e -> idamRoles[0] = idamRoles[0].concat(e).concat(", ")
                 );
                 finalRoles.put(userDetail.getId(), idamRoles[0].substring(0, idamRoles[0].lastIndexOf(", ")));
@@ -190,11 +183,11 @@ public class RoleAssignmentService {
             systemUserService.getSysUserToken(),
             authTokenGenerator.generate(),
             null,
-            userService.getUserByEmailId(authorisation, emailId).get(0).getId()
+            userService.getUserByEmailId(authorisation, emailId).getFirst().getId()
         );
 
         final int[] i = {0};
-        roleAssignmentServiceResponse.getRoleAssignmentResponse().stream().forEach(
+        roleAssignmentServiceResponse.getRoleAssignmentResponse().forEach(
             roleAssignmentResponse ->
                 finalRoles.put(String.valueOf(i[0]++), roleAssignmentResponse.toString())
         );
